# test-actions

./: Cargo.toml  push
.github/: CODEOWNERS
.github/actions/composite-test/: action.yml
.github/workflows/: .test.yaml.swp  actions.yaml  composite.yaml  test.yaml  update-test.yaml  uses-composite.yaml
examples/: jobs.rs  server.rs
src/: cli.rs  defs.rs  error.rs  lib.rs
src/server/: catch.rs  mod.rs  routes.rs
src/server/db/: mod.rs
